2008-10-06  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in: Bump version to 0.12.2.

2008-10-06  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Update for 0.12.1.

2008-10-06  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in, Tomboy/Applet.cs, Tomboy/panelapplet, Tomboy/Tomboy.cs,
	  Tomboy/Makefile.am: Rebundling gnome-sharp panel applet code if
	  gnome-sharp < 2.23.90 is detected during configure.  Earlier
	  versions are generally missing a crucial DllMap in
	  gnome-sharp.dll.config (though some distros patch this).  Fix for
	  bug #555318.

2008-09-22  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in: Bump version to 0.12.1.

2008-09-21  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Update for 0.12.0.

2008-09-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in: Bump version to 0.12.0.

2008-09-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in, Tomboy/Addins/PrintNotes/COPYING,
	  Tomboy/Addins/PrintNotes/gedit-print.c,
	  Tomboy/Addins/PrintNotes/gedit-print.h,
	  Tomboy/Addins/PrintNotes/gtksourceprintjob.c,
	  Tomboy/Addins/PrintNotes/gtksourceprintjob.h,
	  Tomboy/Addins/PrintNotes/Makefile.am,
	  Tomboy/Addins/PrintNotes/PrintNotes.addin.xml,
	  Tomboy/Addins/PrintNotes/PrintNotesNoteAddin.cs: Revert to old
	  (pre-0.11.x) printing add-in, as the Gtk.Print port is not ready
	  for release.

2008-09-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Synchronization/SyncManager.cs: Fix bug #535279 by cancelling
	  sync properly if an exception occurs (in turn cancelling the lock
	  renewal timer).  This could use more testing, though.  Fixed
	  exceptions caused by auto-generated notes like notebook templates,
	  too.

2008-09-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Note.cs: Remove hack that saved notes (unnecessarily) whenever
	  GetCompleteNoteXml was called.  Fixes bug #543593, patch courtesy
	  of the illustrious John Carr.
